# number-system-converter

./: CMakeLists.txt  README.md
assets/: program.hex
docs/: ARCHITECTURE_DESIGN.md  CONTRIBUTING.md  QT6_ARCHITECTURE.md  QT6_CHECKLIST.md  ROADMAP.md
include/mips/: alu.h  cpu.h  disassembler.h  memory.h  program_loader.h  registers.h
include/nsc/: converter.h  format.h  parse.h  ui.h
include/nsc_qt/: assembler.h  main_window.h  preferences_dialog.h  simulator_controller.h
include/nsc_qt/widgets/: datapath_widget.h  memory_widget.h  pipeline_trace_widget.h  register_widget.h
src/: converter.cpp  format.cpp  main.cpp  parse.cpp  ui.cpp
src/mips/: alu.cpp  cpu.cpp  disassembler.cpp  memory.cpp  pipelined_cpu.cpp  program_loader.cpp  registers.cpp
src/nsc/: ui.cpp
src/nsc_qt/: assembler.cpp  main.cpp  main_window.cpp  preferences_dialog.cpp  simulator_controller.cpp
src/nsc_qt/widgets/: datapath_widget.cpp  memory_widget.cpp  pipeline_trace_widget.cpp  register_widget.cpp
tests/: convert_test.cpp
tests/mips/: cpu_test.cpp  disasm_test.cpp
tests/qt_ui/: qt_ui_test.cpp
